--- a/style.css
+++ b/style.css
@@ -2,51 +2,81 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: #f7f4e8;
 }
 
 h1 {
     text-align: center;
     margin-top: 40px;
+    text-transform: uppercase;
 }
 
 form {
-    width: 350px;
-    margin: 40px auto;
-}
-
-label {
-    display: block;
-    width: 350px;
-    padding: 10px 5px;
-    font-weight: bold;
-
+    display: flex;
+    align-items: center;
+    width: 450px;
+    margin: 30px auto;
 }
 
 input {
-    display: block;
-    width: 350px;
+    width: 80%;
     padding: 10px;
-    margin-bottom: 10px;
     border: 1px solid black;
-
+    background-color: #fff;
 }
 
 button {
-    padding: 5px 16px;
+    padding: 10px 16px;
+    margin-left: 10px;
     color: black;
-    background-color: springgreen;
+    background-color: #6bb39b;
     border: 0.5px solid black;
     font-weight: bold;
 }
 
 button:hover {
     cursor: pointer;
-    background-color: rgb(135, 253, 135);
+    background-color: #85e6c0;
 }
 
-p {
-    display: none;
-    width: 350px;
+ul {
+    width: 450px;
     margin: 0 auto;
     padding: 10px;
+    list-style: none;
 }
+
+ul li {
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;  
+}
+
+.itemTarefa {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    border-bottom: 1px solid black;
+    padding: 8px;
+}
+
+.btns-tarefas i {
+    font-size: 28px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.btn-feito {
+    color: #38ab21;
+}
+
+.btn-cancelar {
+    color: #d11515;
+}
+
+.feito {
+    text-decoration: line-through;
+}
+
+
