--- a/style.css
+++ b/style.css
@@ -2,81 +2,79 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #f7f4e8;
+    background-color: #ffffff;
 }
 
 h1 {
     text-align: center;
     margin-top: 40px;
     text-transform: uppercase;
+    color:#2b879e;
+}
+
+#endereco {
+    display: none;
 }
 
 form {
-    display: flex;
-    align-items: center;
-    width: 450px;
-    margin: 30px auto;
+    width: 40%;
+    margin: 10px auto 0 auto;
+    padding: 20px;
 }
 
-input {
-    width: 80%;
-    padding: 10px;
-    border: 1px solid black;
-    background-color: #fff;
+.formCampo {
+    margin-bottom: 20px;
+}
+
+.formLabel {
+    font-weight: bold;
+    color: #4180ab;
+    text-transform: uppercase;
+    display: block;
+    width: 50%;
+    margin: 0 auto 5px auto;
+}
+
+.formCampo input {
+    display: block;
+    width: 50%;
+    margin: 0 auto 8px auto;
+    padding: 8px 16px;
+    border-radius: 10px;
+    border: 0.1px solid black;
+}
+
+#btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 button {
-    padding: 10px 16px;
-    margin-left: 10px;
-    color: black;
-    background-color: #6bb39b;
-    border: 0.5px solid black;
-    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin: 20px 0 0 10px;
+    cursor: pointer;
+    background-color: #4180ab;
+    color: #ffffff;
+    border: none;
 }
 
 button:hover {
-    cursor: pointer;
-    background-color: #85e6c0;
+    background-color:#2b879e;
 }
 
-ul {
-    width: 450px;
-    margin: 0 auto;
-    padding: 10px;
-    list-style: none;
+#voltar, #enviar {
+    display: none;
 }
 
-ul li {
-    font-size: 20px;
+.error {
     font-weight: bold;
-    cursor: pointer;  
-}
-
-.itemTarefa {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-    border-bottom: 1px solid black;
-    padding: 8px;
-}
-
-.btns-tarefas i {
-    font-size: 28px;
-    margin-left: 5px;
-    cursor: pointer;
-}
-
-.btn-feito {
-    color: #38ab21;
-}
-
-.btn-cancelar {
-    color: #d11515;
-}
-
-.feito {
-    text-decoration: line-through;
-}
-
+    color: red;
+    text-transform: uppercase;
+    font-size: 10px;
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+ }
 
