--- a/style.css
+++ b/style.css
@@ -1,80 +1,123 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+    background-color: #f5948bd3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
     background-color: #ffffff;
+    width: 60%;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, .212);
+    border-radius: 15px;
+}
+
+.form {
+    width: 90%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 h1 {
     text-align: center;
-    margin-top: 40px;
+    margin-bottom: 60px;
     text-transform: uppercase;
-    color:#2b879e;
+    color: #e1473f;
 }
 
-#endereco {
-    display: none;
+
+#endereco h3, #dadosPessoais h3 {
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    color: #f5938b;
 }
 
-form {
-    width: 40%;
-    margin: 10px auto 0 auto;
-    padding: 20px;
+#endereco h3::after, #dadosPessoais h3::after {
+    content: " ";
+    display: block;
+    width: 60px;
+    height: 2px;
+    background-color: #f5938b;
 }
 
-.formCampo {
-    margin-bottom: 20px;
+.input-group {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
-.formLabel {
+.input-box {
+    width: 35%;
+    height: 95px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.input-box label {
     font-weight: bold;
-    color: #4180ab;
-    text-transform: uppercase;
-    display: block;
-    width: 50%;
-    margin: 0 auto 5px auto;
+    color: #e1473f;
+    margin-left: 15px;
+    font-size: 14px;
 }
 
-.formCampo input {
-    display: block;
-    width: 50%;
-    margin: 0 auto 8px auto;
-    padding: 8px 16px;
+.input-box input {
+    margin: 10px 0;
+    padding: 13px 20px;
     border-radius: 10px;
-    border: 0.1px solid black;
+    border: none;
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, .212);
 }
 
-#btns {
+.input-box input::placeholder {
+    font-size: 10px;
+    text-transform: uppercase;
+}
+
+.btn {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 button {
-    padding: 10px 20px;
+    padding: 10px 80px;
     border-radius: 10px;
     margin: 20px 0 0 10px;
     cursor: pointer;
-    background-color: #4180ab;
+    background-color: #e1473f;
     color: #ffffff;
     border: none;
+    font-weight: bold;
 }
 
 button:hover {
-    background-color:#2b879e;
+    background-color:#eb6765;
 }
 
-#voltar, #enviar {
-    display: none;
-}
-
-.error {
-    font-weight: bold;
-    color: red;
-    text-transform: uppercase;
+label.error {
     font-size: 10px;
-    display: block;
-    width: 50%;
-    margin: 0 auto;
- }
+    color: black;
+    margin: 0;
+    text-transform: none;
+}
+
 
